--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -301,12 +301,21 @@ box-shadow: 0px -2px 0px rgb(212, 139, 99);
 .hero-card .hero-card-cover{
     transition: 600ms;
     z-index: 1;
+    
 }
- .hero-card, .hero .hero-card-cover{
-    margin: 0 auto 0 auto;
-    width: 260px;
+@media (pointer: none) { 
+
+    .hero-card, .hero .hero-card-cover{
+        display: none;
+    }
+} 
+.hero-card, .hero .hero-card-cover{
+   margin: 0 auto 0 auto;
+   width: 260px;
     height: 440px;
 }
+
+
 .hero-card:hover .hero-card-cover{
    transform:translate(0, -100%);
 }
@@ -324,12 +333,24 @@ box-shadow: 0px -2px 0px rgb(212, 139, 99);
     grid-row: 1;
     grid-column: 1;
 }
+@media (pointer: none) { 
 
-.hover-card .hover-card-cover{
-    transition: 500ms;
-    z-index: 1;
-    border-radius:  0px;
-}
+    .hover-card .hover-card-cover{
+        display: none;
+    }
+} 
+
+
+
+
+    .hover-card .hover-card-cover{
+        transition: 500ms;
+        z-index: 1;
+        border-radius:  0px;
+    }
+
+
+
  .hover-card{
     margin: 0 auto 0 auto;
 
