Updated hover effect

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -411,7 +411,7 @@ header .pseudo-section.MenuWrapper {
     height: 440px;
     background-color: transparent;
     grid-column: span 1;
-    overflow: hidden;
+    overflow: visible;
 
 }
 
@@ -797,11 +797,13 @@ MODIFIERS
 }
 
 .clickable {
-    transition-duration: 5ms;
+    transition-duration: 100ms;
 }
 
 .clickable:hover {
-    outline: solid var(--primary-color) 4px;
+    outline: solid var(--primary-color) 3px;
+    transform: translate(0, -15px);
+    box-shadow: 0px 15px 1px var(--background-color);
 }
 .b1 {
     border-top-left-radius: 110px;
