--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -87,7 +87,9 @@ img {
 /*=========================================================
 HEADER
 =========================================================*/
-
+.invisible{
+    display: none;
+}
 header {
     display: flex;
     align-items: center;
