--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -111,7 +111,8 @@ header {
 HEADER BUTTONS
 =========================================================*/
 
-header section {
+header section,
+header .pseudo-section {
     font-family: header-font;
     display: flex;
     outline: none;
@@ -122,7 +123,7 @@ header section {
 
 @media(max-width: 800px) {
 
-    header .HeaderButton {
+    header .header-button {
 
         margin: 0;
         width: 0;
@@ -133,9 +134,11 @@ header section {
 @media(min-width: 800px) {
 
    
-    header .HeaderButton {
+    header .header-button {
+        
         outline: none;
-
+        font-style: normal;
+        font-weight:normal;
         margin: 30px;
         width: 170px;
         justify-content: center;
@@ -237,13 +240,13 @@ header .pseudo-section.MenuWrapper {
     grid-template-rows: repeat(8, auto);
     width: 100%;
 }
-
-
-
-
+h1{
+    margin: 0px;
+}
 .main-title {
     font-family: header-font;
-
+    font-style: normal;
+    font-weight:normal;
     grid-column: span 4;
     outline: none;
     font-size: 100px;
