--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -68,7 +68,7 @@ section {
 }
 
 
-img {
+img:not(.popup-img) {
     max-width: 100%;
     max-height: 100%;
     height: 100%;
@@ -600,9 +600,6 @@ a.fill-div {
     text-decoration: none;
 }
 
-
-
-
 .display-box {
     width: 200px;
     height: 235px;
@@ -668,6 +665,49 @@ a.fill-div {
     font-size: 15px;
 }
 
+
+
+
+
+
+
+
+
+
+
+.popup-dimmer {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    background-color: rgba(0, 0, 0, 0.5);
+    display: none;
+}
+
+.popup-overlay {
+    width: 1fr;
+    height: 1fr;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    display: none;
+    z-index: 10;
+    background-color: var(--background-color);
+    align-items: center;
+    justify-content: center;
+    padding: 30px;
+    outline: 1px solid var(--primary-color);
+}
+
+.popup-overlay .popup-img 
+{
+
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+}
 
 
 
